# Atlas-AI

./: README.md
backend/: .env.example  .gcloudignore  .gitignore  Dockerfile  pyproject.toml
backend/atlas/: config.py  models.py
backend/atlas/agents/: route_callback.py
backend/atlas/agents/intake/: agent.py  prompt.py
backend/atlas/agents/itinerary/: __init__.py  agent.py  prompt.py
backend/atlas/agents/pipeline/: agent.py
backend/atlas/agents/research/: __init__.py  grounded.py  prompt.py  structured.py
backend/atlas/api/: __init__.py  guardrails.py  main.py
backend/atlas/optimization/: __init__.py  route.py
backend/atlas/schemas/: __init__.py  destination_research.py  itinerary.py  trip_brief.py
backend/tests/: test_optimization.py  test_schemas.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: RouteMap.tsx
frontend/src/lib/: atlas.ts  links.ts
