[project]
name = "atlas"
version = "0.1.0"
description = "Atlas AI — Autonomous Multi-Agent Travel Operating System"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.3.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.115",          
    "uvicorn[standard]>=0.30", 
    "sse-starlette>=2.1",      
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["atlas"]

[tool.ruff]
line-length = 100
target-version = "py310"